crates/atm-core/tests/snapshots/real_fixtures__real_checklist-5-continue.snap
---
source: crates/atm-core/tests/real_fixtures.rs
expression: outline(&replay(label))
---
 0 UserMessage The previous run was interrupted when the app closed. Contin…
 1 SessionInit model=Some("claude-sonnet-5") mode=Some("acceptEdits") apiKeySource=Some("none") mcp_servers=0 warnings=[]
 2 ToolCall Bash [$ tail -3 README.md 2>/dev/null; echo ---; ls approved.txt 2…] Succeeded → cargo test⏎```⏎Edited by AI Task Manager (M5).⏎---⏎approved.…
 3 AssistantText README done, approved.txt done. Redo sleep — prior run got cut off, unsure if fi…
 4 ToolCall Bash [$ python3 -c 'import time; time.sleep(42)'] Denied { message: "Skip it: do not run commands now, just reply DONE." } → The user doesn't want to proceed with this tool use. The too…
 5 AssistantText DONE.
 6 TurnEnd success is_error=false num_turns=Some(3) denials=1 limit=None text=Some("DONE.")
typing previews: 0
