crates/atm-core/tests/snapshots/real_fixtures__real_push-1-git-push.snap
---
source: crates/atm-core/tests/real_fixtures.rs
expression: outline(&replay(label))
---
 0 UserMessage # Permission rule check⏎⏎This task checks the host app's per…
 1 SessionInit model=Some("claude-sonnet-5") mode=Some("default") apiKeySource=Some("none") mcp_servers=0 warnings=[]
 2 AssistantText Run `git push` once, per task.
 3 ToolCall Bash [$ git push] Failed → Permission to use Bash with command git push has been denied…
 4 AssistantText Blocked. Error: `Permission to use Bash with command git push has been denied.`
 5 TurnEnd success is_error=false num_turns=Some(2) denials=1 limit=None text=Some("Blocked. Error: `Permission to use Bash with command git push has been denied.`")
typing previews: 0
